Nicer checkbox styles

--- a/resources/private/common-html/sass/views/_admin.scss
+++ b/resources/private/common-html/sass/views/_admin.scss
@@ -58,7 +58,7 @@
     }
   }
   #modal-dialog-content-component {
-    select, input {
+    select, input[type=text] {
       display: block;
       margin: $marginS 0;
     }
