Display archiving progress / wait indicator on archival summary page

--- a/resources/private/common-html/sass/partials/_archival-summary.scss
+++ b/resources/private/common-html/sass/partials/_archival-summary.scss
@@ -27,6 +27,14 @@
       color: $red;
     }
   }
+  .waiting {
+    input {
+      display: none;
+    }
+    .wait {
+      display: inline;
+    }
+  }
   .attachment-type-container {
     @include clearfix;
     .group-label, .type-id {
