--- a/resources/private/common-html/sass/views/_side_panel.scss
+++ b/resources/private/common-html/sass/views/_side_panel.scss
@@ -256,7 +256,7 @@
   }
 }
 
-@media all and (max-width: 1280px) {
+@media all and (max-width: $narrow-breakpoint) {
   #side-panel {
     .content-wrapper {
       width: 400px;
