--- a/resources/private/common-html/sass/partials/_forms.scss
+++ b/resources/private/common-html/sass/partials/_forms.scss
@@ -996,13 +996,14 @@ $max-columns: 12;
   width: 100%;
   border-top: 1px solid $grid-border-color;
   color: $gray51;
+  padding-left: $grid-margin;
+  padding-right: $grid-margin;
 
   &:last-child {
     border-bottom: none;
   }
 
   h2 {
-    padding-left: $grid-margin;
     margin: $marginM 0;
   }
 
@@ -1175,10 +1176,14 @@ $max-columns: 12;
   @for $i from 1 through $max-columns {
     .col-#{$i} {
       @include column($i);
+      &:first-child {
+        padding-left: 0;
+      }
     }
     .col-#{$i}.col--full > * {
       width: 100%;
     }
+
   }
 
   .row {
@@ -1277,6 +1282,8 @@ $max-columns: 12;
 
 .form-grid--no-border {
   border: none;
+  padding-left: 0;
+  padding-right: 0;
   @for $i from 1 through $max-columns {
     .col-#{$i} {
       &:first-child {
