--- a/resources/private/common-html/sass/partials/_autocomplete.scss
+++ b/resources/private/common-html/sass/partials/_autocomplete.scss
@@ -25,12 +25,12 @@
     min-height: $grid-input-height;
     border: 1px solid $input-border-color;
     min-height: $grid-input-height;
+    background-color: #fff;
     span.autocomplete-selection {
       width: 100%;
       height: 100%;
       display: inline-block;
       box-sizing: border-box;
-      background-color: #fff;
       ul.tags {
         list-style: none;
         padding: 0;
@@ -62,6 +62,11 @@
         }
       }
     }
+    span.autocomplete-selection-wrapper.disabled {
+      border-color: $input-disabled-border-color;
+      background-color: $input-disabled-background-color;
+    }
+
     span.caption, span.selection-text {
       cursor: default;
       line-height: $grid-input-height - 2;
