--- a/resources/private/common-html/sass/partials/_forms.scss
+++ b/resources/private/common-html/sass/partials/_forms.scss
@@ -1122,7 +1122,7 @@ $max-columns: 12;
     vertical-align: middle;
   }
 
-  input[type=text]:disabled, .checkbox-wrapper.disabled {
+  input[type=text]:disabled, textarea:disabled, select:disabled, .checkbox-wrapper.disabled {
     border-color: $input-disabled-border-color;
     background-color: $input-disabled-background-color;
   }
