--- a/resources/public/lp-static/css/main-blessed1.css
+++ b/resources/public/lp-static/css/main-blessed1.css
@@ -5868,7 +5868,7 @@ div.alleYli-radioGroup {
   vertical-align: middle;
 }
 /* line 1125, ../../../private/common-html/sass/partials/_forms.scss */
-.form-grid input[type=text]:disabled, .form-grid .checkbox-wrapper.disabled {
+.form-grid input[type=text]:disabled, .form-grid textarea:disabled, .form-grid select:disabled, .form-grid .checkbox-wrapper.disabled {
   border-color: #dddddd;
   background-color: #f6f6f6;
 }
@@ -8255,17 +8255,4 @@ ul.tabs {
 /* line 49, ../../../private/common-html/sass/partials/_conversation.scss */
 .comment .comment-party span {
   margin-right: 6px;
-}
-/* line 53, ../../../private/common-html/sass/partials/_conversation.scss */
-.comment:after {
-  position: absolute;
-  content: " ";
-  display: block;
-  bottom: -23px;
-  left: 24px;
-  width: 0;
-  height: 0;
-  border-left: 12px solid transparent;
-  border-right: 12px solid transparent;
-  border-top: 24px solid #d8f0fa;
 }
