fix side panel button layout on safari

--- a/resources/private/common-html/sass/views/_side_panel.scss
+++ b/resources/private/common-html/sass/views/_side_panel.scss
@@ -37,9 +37,9 @@
     .btn-conversation, .btn-notice {
       box-shadow: 1px 1px 3px darken($lp-dark-grey, 10%);
       padding: 1em;
-      margin-bottom: $marginM;
       display: block;
       font-weight: bold;
+      margin: 0 0 $marginM 0;
 
       .unseen-comments {
         @include spite-bg;
